--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -1,30 +1,8 @@
 @import "../../../styles/_tokens.scss";
+@import "../../../styles/_mixins.scss";
 
 .button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  font-family: var(--font-family);
-  font-weight: var(--font-weight-semibold); // Using the new token variable
-  border: none;
-  border-radius: var(--radius-md);
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  text-decoration: none;
-  outline: none;
-  position: relative;
-  user-select: none;
-  white-space: nowrap;
-
-  &:focus {
-    outline: 2px solid var(--color-blue-6);
-    outline-offset: 2px;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-    opacity: var(--opacity-50);
-  }
+  @include button-base;
 
   // Size variants
   &.size-xs {
@@ -160,24 +138,19 @@
   // State styles
   &.state-hover {
     &:not(:disabled) {
-      transform: var(--transform-hover);
-      box-shadow: var(--shadow-hover);
+      @include interactive-hover;
     }
   }
 
   &.state-disabled {
-    opacity: var(--opacity-50);
-    cursor: not-allowed;
-    pointer-events: none;
+    @include disabled;
   }
 
   // Icon styles
   .left,
   .right {
     flex-shrink: 0;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    @include flex-center;
   }
 
   .left {
